# crewai_tutorial

./: README.md
crewai_tutorial/: README.md  pyproject.toml  report.md
crewai_tutorial/src/crewai_tutorial/: crew.py  main.py
