[project]
name = "crewai_tutorial"
version = "0.1.0"
description = "crewai_tutorial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
crewai_tutorial = "crewai_tutorial.main:run"
run_crew = "crewai_tutorial.main:run"
train = "crewai_tutorial.main:train"
replay = "crewai_tutorial.main:replay"
test = "crewai_tutorial.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
